syntax = "proto3";

package mail;

service MailService {
    rpc SendAccessCode (SendAccessCodeDTO) returns (stream AccessCode);
}

message AccessCode {
    string id = 1;
    int64 createdAt = 2;
    int64 expiresIn = 3;
    int32 code = 4;
    string user_id = 5;
}

message SendAccessCodeDTO {
    string email = 1;
    string user_id = 2;
}